// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form 1`] = `
<div
  className="row"
>
  <div
    className="formBox col-12 max-width-970 formBoxDefault"
  >
    <h1
      className="form-component__title"
    >
      SelectCompany
    </h1>
    <form
      className=""
      onSubmit={[Function]}
    >
      <div
        className="property-set form-row"
      />
      <div
        className="formActions"
      >
        <div>
          <button
            className="btn btn-primary"
            onClick={[Function]}
            type="submit"
          >
            Submit
          </button>
           
        </div>
      </div>
    </form>
    <br />
  </div>
  <div
    className="col-12"
  />
</div>
`;

exports[`Form errorOnApply 1`] = `
<div
  className="row"
>
  <div
    className="formBox col-12 max-width-970 formBoxDefault"
  >
    <h1
      className="form-component__title"
    >
      Тестовая операция
    </h1>
    <form
      className=""
      onSubmit={[Function]}
    >
      <div
        className="property-set form-row"
      />
      <div
        className="formActions"
      >
        <div>
          <button
            className="btn btn-primary"
            onClick={[Function]}
            type="submit"
          >
            Submit
          </button>
           
        </div>
      </div>
    </form>
    <br />
  </div>
  <div
    className="col-12"
  >
    <div
      className="errorPane"
    >
      <h1
        className="errorPane__title"
      >
        500
         - 
        Internal error occured during operation testtable.TestOperation
      </h1>
      <br />
      <pre
        className="errorPane__code"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Be5Exception: Internal error occured during operation... ",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`InlineForm 1`] = `
<form
  className="form-inline"
  onSubmit={[Function]}
>
  <div
    className="property-set d-flex"
  />
  <button
    className="btn btn-primary mb-2"
    onClick={[Function]}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`ModalForm 1`] = `
<div>
  <div
    className="modal-header"
  >
    <h5
      className="modal-title"
    >
      SelectCompany
    </h5>
    <button
      aria-label="Close"
      className="close"
      onClick={[Function]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
  <form
    className=""
    onSubmit={[Function]}
  >
    <div
      className="modal-body"
    >
      <div
        className="property-set form-row"
      />
    </div>
    <div
      className="col-12"
    />
    <div
      className="modal-footer"
    >
      <button
        className="btn btn-primary"
        onClick={[Function]}
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</div>
`;

exports[`SubmitOnChangeForm 1`] = `
<div
  className="submit-onchange-form"
>
  <input
    className="property-input form-control"
    disabled={undefined}
    id="companyIDPropertyInput"
    maxLength={undefined}
    onChange={[Function]}
    pattern={undefined}
    placeholder={undefined}
    required={true}
    type="text"
    value=""
  />
  <div
    className="col-12"
  />
</div>
`;
